# daily_news

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: schedule-content.yml  schedule-etf.yml  schedule-industry-news.yml  schedule-news.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  SETUP.md
src/: config.py  logger.py  telegram_bot.py
src/api/: __init__.py  main.py  websocket.py
src/api/routers/: __init__.py  analytics.py  chat.py  learning.py  news.py  notifications.py  quiz.py  social.py  user.py
src/models/: database.py
src/schedulers/: job_scheduler.py
src/services/: ai_tutor.py  content_generator.py  etf_analyzer.py  industry_news.py  learning_service.py  news_scraper.py
src/utils/: achievements_seed.py  ocr_processor.py
tests/: test_ocr.py  test_services.py
