[tool.poetry]
name = "daily-automated-intelligence-platform"
version = "0.1.0"
description = "금융, 뉴스, 콘텐츠 생성을 자동화하는 통합 플랫폼"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-telegram-bot = "^20.7"
pyTelegramBotAPI = "^4.14.0"
APScheduler = "^3.10.4"
sqlalchemy = "^2.0.25"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
requests = "^2.31.0"
yfinance = "^0.2.33"
pandas = "^2.1.4"
numpy = "^1.26.2"
anthropic = "^0.8.1"
openai = "^1.6.1"
textblob = "^0.17.1"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
colorlog = "^6.8.0"
httpx = "^0.26.0"
aiohttp = "^3.9.1"
tenacity = "^8.2.3"
cachetools = "^5.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]
